--- a/css/flappy.css
+++ b/css/flappy.css
@@ -10,8 +10,10 @@
 .flappy {
     position: relative;
     border: 5px solid dodgerblue;
-    height: 500px; /* 700 */
-    width: 1000px; /* 1200 */
+    height: 500px;
+    /* 700 */
+    width: 1000px;
+    /* 1200 */
     /* background-color: deepskyblue; */
     overflow: hidden;
     background-image: url(../images/Angel-Island-Sonic.png);
@@ -23,7 +25,7 @@
     position: absolute;
     top: 0;
     height: 100%;
-    display: flex; 
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
@@ -35,15 +37,15 @@
 }
 
 .barreira .borda {
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,68,1) 35%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(121, 9, 68, 1) 35%, rgba(0, 212, 255, 1) 100%);
     height: 30px;
     width: 130px;
     border: 2px solid #000;
-    
+
 }
 
 .barreira .corpo {
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,68,1) 35%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(121, 9, 68, 1) 35%, rgba(0, 212, 255, 1) 100%);
     height: 150px;
     width: 110px;
     border-left: 2px solid #000;
@@ -55,4 +57,13 @@
     width: 200px;
     left: calc(50% - 100px);
     transform: scaleX(-1);
+}
+
+.progresso {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-family: Pixel;
+    font-size: 70px;
+    z-index: 100;
 }
